infra/infrastructure/observability/config/grafana-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`grafana.homelab.gvlad.dev`)
      kind: Rule
      middlewares:
        - name: security-headers
      services:
        - name: observability-grafana
          port: 80
  tls: {}
