infra/infrastructure/observability/config/prometheus-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`prometheus.homelab.gvlad.dev`)
      kind: Rule
      middlewares:
        - name: security-headers
      services:
        - name: observability-kube-prometh-prometheus
          port: 9090
  tls: {}
